fixed button overflow

--- a/css/main.css
+++ b/css/main.css
@@ -141,7 +141,7 @@ body {
   position: absolute;
   background: darkgrey;
   top: 130px;
-  left: 810px;
+  left: 1130px;
   padding: 5px;
   color: darkred;
 }
